--- a/index.html
+++ b/index.html
@@ -9,32 +9,47 @@
 <body>
     <div id="header">
         <h2 id="typewriter"></h2>
-    </div>    
+    </div>
+    
     <div class="container">
-        <h1 id="note"><strong></strong></h1> 
+        <h1 id="note"><strong></strong></h1>
         <h1>Smart To-Do List</h1>
+
+        <!-- User ID Section -->
+        <div id="user-id-container">
+            <input type="text" id="user-name" placeholder="Enter your name">
+            <button id="get-id-btn" class="colorful-button">Get Your ID</button>
+            <p id="user-id-display"></p>
+        </div>
+
+        <!-- New Task Section -->
         <div id="new-task-container">
             <input type="text" id="task-input" placeholder="Add a new task">
             <input type="date" id="date-input">
             <input type="time" id="time-input">
-            <button id="add-task-btn">Add Task</button>
+            <button id="add-task-btn" class="colorful-button">Add Task</button>
         </div>
+
+        <!-- Filter Section -->
         <div id="filter-container">
             <button class="filter-btn" data-filter="today">Today</button>
             <button class="filter-btn" data-filter="week">This Week</button>
             <button class="filter-btn" data-filter="month">This Month</button>
         </div>
+
+        <!-- Task List Section -->
         <ul id="task-list"></ul>
     </div>
+
     <footer>
         <h4>Authority: Abdullah Siddique</h4>
         <h4>Contact: siddiqueabdullah581@gmail.com<br>
         Github: <strong><a href="https://github.com/Abdullah-Siddique">Abdullah Siddique</a></strong></h4>
         <p>© 2024 Smart To-Do List. All rights reserved.</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
-
 
 
